Aggiunta NoCandidatesLeftException + Ottimizzazioni Sonar