@@ -5,7 +5,10 @@ import com.gianfro.games.entities.ChangeLog;
 import com.gianfro.games.entities.SkimmingResult;
 import com.gianfro.games.entities.Tab;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 public class Naked1 {
 
@@ -15,16 +18,24 @@ public class Naked1 {
         Set<ChangeLog> changeLogs = new HashSet<>();
         try {
             for (Tab tab : tabs) {
-                if (tab.getNumbers().size() == 1) {
-                    Change change = new Change(NAKED_SINGLE, null, tab.getRow(), tab.getCol(), tab.getNumbers().get(0));
-                    changeLogs.add(new ChangeLog(
-                            null,
-                            null,
-                            0,
-                            Collections.singletonList(tab),
-                            NAKED_SINGLE,
-                            null,
-                            Collections.singletonList(change)));
+                if (tab.getCandidates().size() == 1) {
+                    Change change = Change.builder()
+                            .solvingTechnique(NAKED_SINGLE)
+                            .house(null)
+                            .row(tab.getRow())
+                            .col(tab.getCol())
+                            .number(tab.getCandidates().get(0))
+                            .build();
+                    ChangeLog changeLog = ChangeLog.builder()
+                            .unitExamined(null)
+                            .house(null)
+                            .houseNumber(0)
+                            .unitMembers(List.of(tab))
+                            .solvingTechnique(NAKED_SINGLE)
+                            .solvingTechniqueVariant(null)
+                            .changes(List.of(change))
+                            .build();
+                    changeLogs.add(changeLog);
                 }
             }
         } catch (Exception e) {
