@@ -21,8 +21,8 @@ public class ControlloTerzettiColonne {
                     List<List<Integer>> boxCols = Utils.getBoxColumns(boxesTrio.get(box));
                     for (int column : Utils.INDEXES_02) {
                         if (boxCols.get(column).contains(number)) {
-                            welcomingCols.remove(new Integer(column));
-                            welcomingBoxes.remove(new Integer(box));
+                            welcomingCols.remove(Integer.valueOf(column));
+                            welcomingBoxes.remove(Integer.valueOf(box));
                         }
                     }
                 }
@@ -31,13 +31,23 @@ public class ControlloTerzettiColonne {
                     List<List<Integer>> welcomingBoxCols = Utils.getBoxColumns(welcomingBox);
                     if (Collections.frequency(welcomingBoxCols.get(welcomingCols.get(0)), 0) == 1) {
                         int indexBlankSquare = welcomingBoxCols.get(welcomingCols.get(0)).indexOf(0);
-                        Change change = new Change(
-                                "CTC",
-                                House.COL,
-                                ((3 * welcomingBoxes.get(0)) + (indexBlankSquare + 1)),
-                                ((3 * colsTrio) + (welcomingCols.get(0) + 1)),
-                                number);
-                        changeLogs.add(new ChangeLog(null, null, 0, Arrays.asList(), "CTC", null, Arrays.asList(change)));
+                        Change change = Change.builder()
+                                .solvingTechnique("CTC")
+                                .house(House.COL)
+                                .row(((3 * welcomingBoxes.get(0)) + (indexBlankSquare + 1)))
+                                .col(((3 * colsTrio) + (welcomingCols.get(0) + 1)))
+                                .number(number)
+                                .build();
+                        ChangeLog changeLog = ChangeLog.builder()
+                                .unitExamined(null)
+                                .house(null)
+                                .houseNumber(0)
+                                .unitMembers(List.of())
+                                .solvingTechnique("CTC")
+                                .solvingTechniqueVariant(null)
+                                .changes(List.of(change))
+                                .build();
+                        changeLogs.add(changeLog);
                         ///
 //                    	System.out.println(change);
 //                    	Utils.grid(sudoku);
@@ -47,25 +57,34 @@ public class ControlloTerzettiColonne {
                         int rowsCount = 0;
                         for (int element : welcomingBoxCols.get(welcomingCols.get(0))) {
                             if (element != 0) {
-                                welcomingBoxRows.remove(new Integer(rowsCount));
+                                welcomingBoxRows.remove(Integer.valueOf(rowsCount));
                             } else {
                                 if (sudoku.getRows().get((3 * welcomingBoxes.get(0)) + rowsCount).contains(number)) {
-                                    welcomingBoxRows.remove(new Integer(rowsCount));
+                                    welcomingBoxRows.remove(Integer.valueOf(rowsCount));
                                 }
                             }
                             rowsCount++;
                         }
                         if (welcomingBoxRows.size() == 1) {
-                            Change change = new Change(
-                                    "CTC", House.COL,
-                                    ((3 * welcomingBoxes.get(0)) + welcomingBoxRows.get(0) + 1),
-                                    (3 * colsTrio + welcomingCols.get(0) + 1),
-                                    number);
-                            changeLogs.add(new ChangeLog(null, null, 0, Arrays.asList(), "CTC", null, Arrays.asList(change)));
-                            ///
+                            Change change = Change.builder()
+                                    .solvingTechnique("CTC")
+                                    .house(House.COL)
+                                    .row(((3 * welcomingBoxes.get(0)) + welcomingBoxRows.get(0) + 1))
+                                    .col((3 * colsTrio + welcomingCols.get(0) + 1))
+                                    .number(number)
+                                    .build();
+                            ChangeLog changeLog = ChangeLog.builder()
+                                    .unitExamined(null)
+                                    .house(null)
+                                    .houseNumber(0)
+                                    .unitMembers(List.of())
+                                    .solvingTechnique("CTC")
+                                    .solvingTechniqueVariant(null)
+                                    .changes(List.of(change))
+                                    .build();
+                            changeLogs.add(changeLog);
 //	                    	System.out.println(change);
 //	                    	Utils.grid(sudoku);
-                            ///
                         }
                     }
                 }
